--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app:
     build: .
-    entrypoint: .Docker/entrypoint.sh
+    entrypoint: .docker/entrypoint.sh
     container_name: prismaapi-app
     ports:
       - "4000:3000"
@@ -13,14 +13,14 @@ services:
       - db
 
   db:
-    build: .Docker/postgres
+    build: .docker/postgres
     container_name: prismaapi-db
     restart: always
     tty: true
     ports:
       - "5432:5432"
     volumes:
-      - .Docker/dbdata:/var/lib/postgresql/data
+      - .docker/dbdata:/var/lib/postgresql/data
     environment:
       - POSTGRESS_PASSWORD=docker
       - POSTGRESS_DB=prismaapi
